# openfactory-test

./: .gitignore  README.md  build_apps.sh  opcua_test_change_var.py  pyproject.toml  run_tests.sh  start_test_env.sh  stop_test_env.sh  subscribe_to_assets.py
.devcontainer/: devcontainer.json  postStartScript.sh
ressources/: dev_temp_sensors.yml  devices.yml  setup_nfs_server.sh
ressources/apps/demo/: Dockerfile  app_demo.yml  docker-compose.yml
ressources/apps/demo/src/: app.py
ressources/apps/fastapiDemo/: Dockerfile  app_fastapi_demo.yml
ressources/apps/fastapiDemo/src/: main.py
ressources/apps/flaskDemo/: Dockerfile  app_flask_demo.yml
ressources/apps/flaskDemo/src/: app.py
ressources/apps/flaskDemo/src/routes/: about.py  (+2 more)
ressources/devices/: dev_barcode_reader.yml  dev_mtconnect.yml  dev_shdr_sensor.yml  dev_temp_sensors.yml
scripts/: README.md  bump_version.py  requirements_scripts.txt
tests/: deploy_assets.sh  opcua_test_change_var.py  send_cmd_to_asset.py  teardown_assets.sh  test_asset_subscription_latency.py  test_nfs_storage.py  test_ofa_app_methods.py  test_ofa_fastapi_app.py  test_ofa_flask.py  test_send_cmds.py  test_write_attribute.py
tests/apps/: test_ofa_app_attributes.py  test_ofa_fastapi_app.py
tests/assets/: test_asset_subscription.py  test_subscribe_to_attributes.py  test_write_attribute.py
tests/manual_tests/: opcua_test_change_var.py  subscribe_to_assets.py
tests/mtconnect/: test_mtconnect_agent.py  test_mtconnect_device.py  test_mtconnect_producer.py
tests/prometheus/: test_targets.py
tests/shdr/: test_shdr_asset.py
(+2 files in other folders)
