[project]
name = "openfactory-test"
version = "0.6.5rc1"
description = "Minimal repo to verify if a release was succesfull"
requires-python = ">=3.12"
dependencies = ["OpenFactory @ git+https://github.com/openfactoryio/openfactory-core.git@v0.6.5rc1"]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "tomlkit",
    "requests",
    "fastapi",
    "flask",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
